assets/css/main.css
@import url("fontawesome-all.min.css");
@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	-webkit-text-size-adjust: none;
}

mark {
	background-color: transparent;
	color: inherit;
}

input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input,
select,
textarea {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
}

/* Basic */

html {
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

html,
body {
	background: #1c1d26;
}

body.is-preload *,
body.is-preload *:before,
body.is-preload *:after {
	-moz-animation: none !important;
	-webkit-animation: none !important;
	-ms-animation: none !important;
	animation: none !important;
	-moz-transition: none !important;
	-webkit-transition: none !important;
	-ms-transition: none !important;
	transition: none !important;
}

body,
input,
select,
textarea {
	color: rgba(255, 255, 255, 0.75);
	font-family: "Roboto", Helvetica, sans-serif;
	font-size: 15pt;
	font-weight: 250;
	line-height: 1.75em;
}

a {
	-moz-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
	-webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
	-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
	transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
	color: #ff8c69;
	text-decoration: none;
}

p a {
	border-bottom: dotted 1px;
}

a:hover {
	color: #ff5825 !important;
	border-bottom-color: transparent;
}

strong,
b {
	color: #ff7a52;
	font-weight: 500;
}

em,
i {
	font-style: italic;
}

p {
	margin: 0 0 2em 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: #ffffff;
	font-weight: 300;
	line-height: 1em;
	margin: 0 0 1em 0;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
	color: inherit;
	border: 0;
}

h2 {
	font-size: 2em;
	line-height: 1.5em;
	letter-spacing: -0.025em;
}

h3 {
	font-size: 1.35em;
	line-height: 1.5em;
}

h4 {
	font-size: 1.1em;
	line-height: 1.5em;
}

h5 {
	font-size: 0.9em;
	line-height: 1.5em;
}

h6 {
	font-size: 0.7em;
	line-height: 1.5em;
}

sub {
	font-size: 0.8em;
	position: relative;
	top: 0.5em;
}

sup {
	font-size: 0.8em;
	position: relative;
	top: -0.5em;
}

hr {
	border: 0;
	border-bottom: solid 1px rgba(255, 255, 255, 0.3);
	margin: 3em 0;
}

hr.major {
	margin: 4em 0;
}

blockquote {
	border-left: solid 4px rgba(255, 255, 255, 0.3);
	font-style: italic;
	margin: 0 0 2em 0;
	padding: 0.5em 0 0.5em 2em;
}

code {
	background: rgba(255, 255, 255, 0.075);
	border-radius: 4px;
	font-family: "Courier New", monospace;
	font-size: 0.9em;
	margin: 0 0.25em;
	padding: 0.25em 0.65em;
}

pre {
	-webkit-overflow-scrolling: touch;
	font-family: "Courier New", monospace;
	font-size: 0.9em;
	margin: 0 0 2em 0;
}

pre code {
	display: block;
	line-height: 1.75em;
	padding: 1em 1.5em;
	overflow-x: auto;
}

.align-left {
	text-align: left;
}

.align-center {
	text-align: center;
}

.align-right {
	text-align: right;
}

/* Loader */

@-moz-keyframes spinner-show {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@-webkit-keyframes spinner-show {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@-ms-keyframes spinner-show {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@keyframes spinner-show {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@-moz-keyframes spinner-hide {
	0% {
		color: rgba(255, 255, 255, 0.15);
		z-index: 100001;
		-moz-transform: scale(1) rotate(0deg);
		-webkit-transform: scale(1) rotate(0deg);
		-ms-transform: scale(1) rotate(0deg);
		transform: scale(1) rotate(0deg);
	}

	99% {
		color: #1c1d26;
		z-index: 100001;
		-moz-transform: scale(0.5) rotate(360deg);
		-webkit-transform: scale(0.5) rotate(360deg);
		-ms-transform: scale(0.5) rotate(360deg);
		transform: scale(0.5) rotate(360deg);
	}

	100% {
		color: #1c1d26;
		z-index: -1;
		-moz-transform: scale(0.5) rotate(360deg);
		-webkit-transform: scale(0.5) rotate(360deg);
		-ms-transform: scale(0.5) rotate(360deg);
		transform: scale(0.5) rotate(360deg);
	}
}

@-webkit-keyframes spinner-hide {
	0% {
		color: rgba(255, 255, 255, 0.15);
		z-index: 100001;
		-moz-transform: scale(1) rotate(0deg);
		-webkit-transform: scale(1) rotate(0deg);
		-ms-transform: scale(1) rotate(0deg);
		transform: scale(1) rotate(0deg);
	}

	99% {
		color: #1c1d26;
		z-index: 100001;
		-moz-transform: scale(0.5) rotate(360deg);
		-webkit-transform: scale(0.5) rotate(360deg);
		-ms-transform: scale(0.5) rotate(360deg);
		transform: scale(0.5) rotate(360deg);
	}

	100% {
		color: #1c1d26;
		z-index: -1;
		-moz-transform: scale(0.5) rotate(360deg);
		-webkit-transform: scale(0.5) rotate(360deg);
		-ms-transform: scale(0.5) rotate(360deg);
		transform: scale(0.5) rotate(360deg);
	}
}
/* ... */

